--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DSA Arrays Roadmap</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -95,6 +95,6 @@
       </table>
     </section>
   </main>
-  <footer><p>© 2025 YourName — DSA Repo</p></footer>
+  <footer><p>© 2025 Nittin S — DSA Repo</p></footer>
 </body>
 </html>
